--- a/style.css
+++ b/style.css
@@ -7,10 +7,12 @@ body{
     border: 10px solid whitesmoke;
     margin: 0 auto;
     margin-top: 80px;
+    padding: 12px;
 }
 h1{
     /* width: 200px; */
     border: 5px solid black;
+    padding: 10px;
     margin-top: 10px;
     text-align: center;
     color: whitesmoke;
@@ -20,4 +22,8 @@ p{
     background-color: rgb(128, 124, 124);
     font-size: 24px;
     
+}
+
+p#demo{
+    background-color: darkgrey;
 }
